--- a/src/components/tictactoe/GameStyles.css
+++ b/src/components/tictactoe/GameStyles.css
@@ -1,7 +1,7 @@
 .game-board {
-    margin: 25px;
-    width: 500px;
-    height: 500px;
+    margin: 20px;
+    width: 700px;
+    height: 700px;
     border: 1px solid #ccc;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -11,4 +11,10 @@
 .game-cell {
     border: 1px solid #ccc;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 50px;
 }
+
