--- a/src/components/tictactoe/GameStyles.css
+++ b/src/components/tictactoe/GameStyles.css
@@ -1,20 +1,44 @@
 .game-board {
-    margin: 20px;
-    width: 700px;
-    height: 700px;
-    border: 1px solid #ccc;
+    margin: 30px;
+    width: 500px;
+    height: 500px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 25px;
 }
 
 .game-cell {
-    border: 1px solid #ccc;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: bold;
     font-size: 50px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
+.game-cell.is-x {
+    color: #2cccff;
+}
+
+.game-cell.is-o {
+    color: #ff6651;
+}
+
+.game-reset {
+    margin: 25px;
+    display: inline-block;
+    padding: 10px 20px;
+    color: white;
+    background-color: #6a5af9;
+    font-size: 16px;
+    border: none;
+    outline: none;
+}
+
+.game-winner {
+    padding: 25px;
+    font-size: 20px;
+    color: #f62682;
+}
