--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,16 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-input, textarea, select, button {
+input,
+textarea,
+select,
+button {
   outline: none;
 }
 
@@ -14,7 +19,8 @@ input {
   line-height: normal;
 }
 
-label, button {
+label,
+button {
   cursor: pointer;
 }
 
@@ -72,4 +78,84 @@ img {
   font-size: 14px;
   color: #999;
   font-weight: 300;
+}
+
+.item-user {
+  text-align: -webkit-center;
+  align-items: center;
+  padding: 2rem;
+  width: 15rem;
+  line-height: 2rem;
+}
+
+.list-user {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center
+
+}
+
+.pagin {
+  display: flex;
+  
+}
+
+#app {
+  width: 50%;
+  margin: 0 auto;
+}
+
+#page-numbers {
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#page-numbers > li {
+  color: rgb(62, 140, 204);
+  user-select: none;
+  cursor: pointer;
+  margin: 0 3px;
+  padding: 0 5px;
+  border: 1px solid rgb(62, 140, 204);
+  text-align: center;
+  border-radius: 2px;
+}
+
+#page-numbers > li:not(.active):hover {
+  background: rgb(62, 140, 204);
+  color: white;
+}
+
+#page-numbers > li.active {
+  border-color: grey;
+  color: white;
+  background: grey;
+  cursor: default;
+}
+
+.table tbody tr:nth-child(2n + 1) {
+  background: #d2d2d280;
+}
+
+.table td, th {
+  padding: 10px 7px;
+}
+
+.table {
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.news-per-page {
+  margin-bottom: 15px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
 }
