add category filter youtube

--- a/src/components/youtube/yt-style.scss
+++ b/src/components/youtube/yt-style.scss
@@ -1,7 +1,7 @@
-.youtube-list {
-  background: lavender;
+.block-right {
   width: 75%;
   float: right;
+  background: lavender;
 }
 
 .youtube-side-bar {
