--- a/src/components/youtube/yt-style.scss
+++ b/src/components/youtube/yt-style.scss
@@ -56,3 +56,10 @@ a {
   color: #999;
   font-size: 9px;
 }
+
+.main-photo>div>div.spinner-container-regular {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
